<resources>
    <string name="app_name">My Application</string>
    <string name="logo_description">ArMeasure</string>
    <string name="Clear">Clear</string>
    <string name="Photo">Photo</string>
    <string name="Helptext">Click the button below to start scanning.</string>
    <string name="HelpButton">Start scanning</string>
    <string name="OpencvButton">Opencv(beta)</string>
    <string name="GalleryButton">Gallery</string>
    <string name="ChoosePlate">Select vertical or horizontal plane.</string>
    <string name="DotsDrop">The points have been reset.</string>
    <string name="WelcomeHint">Welcome!</string>
    <string name="PlateHint">For a better display of the plane, press the screen and move the phone in different positions.</string>
    <string name="DotsDropHint">Reset points</string>
    <string name="DotsDropHintText">Press this button to reset all dots on the screen.</string>
    <string name="TakePhoto">Photo</string>
    <string name="TakePhotoHintText">This button allows you to take a photo of the current measurements.</string>
    <string name="Distance">Distance</string>
    <string name="NoSavedPhotos">There are no saved photos.</string>
    <string name="DeleteOneDot">Clear one dot</string>
    <string name="ChoosePlateToast">Select vertical or horizontal plane.</string>
    <string name="AllDotsClearToast">All points have been reset.</string>
    <string name="TextElementError">Failed to create text element: %1$s</string>
    <string name="LastDotClearToast">The last point has been removed.</string>
    <string name="NotDotsToClearToast">There are no points to delete.</string>
    <string name="ErrorPhotoCreationToast">Error creating photo</string>
    <string name="PhotoSavedToast">Photo saved: %1$s</string>
    <string name="SavedPhotoError">Failed to save photo</string>
    <string name="CantOpenPhotoToast">Failed to open photo</string>
    <string name="ErrorPhotoOpenning">Error opening photo: %1$s</string>
    <string name="CreateProject">Create Project</string>
    <string name="ProjectName">Enter the project name</string>
    <string name="ChooseExisting">Select existing</string>
    <string name="EnterProjectNameToast">Enter the project name!</string>
    <string name="NoProjectsAvailablToast">There are no projects available.</string>
    <string name="CancelButton">Cancel</string>
    <string name="NoPhotosInProjectToast">There are no photos in the project %1$s.</string>
    <string name="ClearLastButtonHint">Reset point</string>
    <string name="ClearLastButtonHintText">This button deletes the last point.</string>
    <string name="ProjectNotChosenToast">Project not selected. Photo not saved.</string>
    <string name="InvalidProjectPathToast">Неверный путь к проекту.</string>
    <string name="NoPhotosToUploadToast">Нет фотографий для загрузки.</string>
    <string name="UploadFailedToast">Ошибка загрузки: %1$s.</string>
    <string name="UploadSuccessToast">Успешно загружено: %1$s.</string>
    <string name="CreateObjFailedToast">Failed to create object on server.</string>
    <string name="CreateObjSuccessToast">Successfully created object on server.</string>
    <string name="onboarding_title_1">ArMeurr - Умный инструмент для измерений\n</string>
    <string name="onboarding_description_1"> Измеряйте длину, площадь и углы с высокой точностью\n</string>
    <string name="next">Next\n</string>
    <string name="onboarding_title_2">Create an impressive photos and publish it</string>
    <string name="onboarding_description_2">Сохраняйте результаты, добавляйте фотографии и делитесь ими</string>
    <string name="onboarding_description_3">идеальный инструмент для строителей, дизайнеров и инженеров.</string>
    <string name="onboarding_title_3">Инструмент для любителей и професионалов</string>
    <string name="skip">skip</string>

</resources>