<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/projectNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ProjectName" />

    <Button
        android:id="@+id/createProjectButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CreateProject"
        android:layout_marginTop="16dp" />
    <Button
        android:id="@+id/selectExistingProjectButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ChooseExisting"
        android:layout_marginTop="16dp" />
</LinearLayout>
