<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background_color"
    tools:context=".activities.StartActivity">


    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_ar_logo"
        android:contentDescription="@string/logo_description"
        android:layout_marginBottom="24dp" />



    <TextView
        android:id="@+id/subTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Helptext"
        android:textSize="16sp"
        android:textColor="@color/secondary_text_color"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center" />


    <Button
        android:id="@+id/startButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/HelpButton"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:backgroundTint="@color/button_color"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingRight="30dp"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/ic_scan"
        android:elevation="6dp" />
    <Button
        android:id="@+id/startButtonOpencv"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/OpencvButton"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:backgroundTint="@color/button_color"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingRight="30dp"
        android:drawableEnd="@drawable/ic_opencv"
        android:layout_marginTop="16dp"
        android:elevation="6dp" />
    <Button
        android:id="@+id/viewPhotosButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/GalleryButton"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:backgroundTint="@color/button_color"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingRight="30dp"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/ic_storage"
        android:elevation="6dp" />


</LinearLayout>
